WC-585 Fix radio clipped in queries notebook caches list

--- a/modules/web-console/frontend/app/components/page-queries/components/queries-notebook/style.scss
+++ b/modules/web-console/frontend/app/components/page-queries/components/queries-notebook/style.scss
@@ -134,7 +134,10 @@ queries-notebook {
 
     .queries-notebook-displayed-caches {
         max-height: 210px;
+        padding: 0 5px;
         margin-top: 10px;
+        margin-left: -5px;
+        margin-right: -5px;
 
         overflow-y: auto;
     }
